# parse_vacancies

./: .gitignore  README.md  pyproject.toml
data/: hh_responses.json  result.json
vacancy_parser/: CollectInstanses.py  LocalDataService.py  connector.py  main.py  parse_data_classes.py  requests_classes.py  utils.py
